add webview component

--- a/sample/src/main/assets/test.html
+++ b/sample/src/main/assets/test.html
@@ -1,6 +1,18 @@
+<!DOCTYPE html>
 <html>
-<head></head>
+<head>
+    <script>
+        function showAlert(){
+            alert("test")
+        }
+    </script>
+</head>
 <body>
-<a href="www.baidu.com">test</a>
+<div style="height:200px"></div>
+<p style="font-size:50px">Test Html</p>
+<div style="height:50px"></div>
+<button type="button" onclick="showAlert()" style="font-size:50px">Test alert</button>
+<div style="height:50px"></div>
+<a href="https://www.baidu.com" style="font-size:50px">test link</a><br>
 </body>
 </html>
