handle webview common error

--- a/sample/src/main/assets/test.html
+++ b/sample/src/main/assets/test.html
@@ -8,11 +8,11 @@
     </script>
 </head>
 <body>
-<div style="height:200px"></div>
-<p style="font-size:50px">Test Html</p>
-<div style="height:50px"></div>
 <button type="button" onclick="showAlert()" style="font-size:50px">Test alert</button>
-<div style="height:50px"></div>
+
 <a href="https://www.baidu.com" style="font-size:50px">test link</a><br>
+<a href="https://github.com/qwerasdfzxcqwe" style="font-size:50px">test 404</a><br>
+<a href="https://www.asdbsdsdf.com" style="font-size:50px">test error link</a><br>
+
 </body>
 </html>
